<resources>
    <string name="app_name">Where am I?</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="country">Country</string>
    <string name="locality">Locality</string>
    <string name="address">Address</string>
    <string name="imHere">I\'m here!</string>
    <string name="notFound">Not found</string>
    <string name="takeAPhoto">Take a photo</string>
    <string name="errorCantCreateDir">Can\'t create directory to save image.</string>
    <string name="errImgCouldntBeSaved">Image could not be saved.</string>
    <string name="noCamFound">No camera found.</string>
    <string name="newPhoto">New photo!</string>
</resources>
